--- a/recipes/src/app/header/header.component.html
+++ b/recipes/src/app/header/header.component.html
@@ -11,6 +11,7 @@
     <div class="links">
       <div class="link" (click)="toAddRecipe()">הוספת מתכון<mat-icon class="lock-icon">add</mat-icon></div>
       <div class="link" (click)="toAllRecipes()">מתכונים<mat-icon class="lock-icon">person</mat-icon></div>
+      <div class="link" (click)="toSignup()">הרשמה<mat-icon class="lock-icon">fingerprint</mat-icon></div>
     </div>
 
   </div>
