--- a/recipes/src/app/small-recipe/small-recipe.component.html
+++ b/recipes/src/app/small-recipe/small-recipe.component.html
@@ -3,19 +3,21 @@
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>cake</mat-card-subtitle>
+        <mat-card-title>{{recipe.name}}</mat-card-title>
+        <mat-card-subtitle>{{recipe.categoryId}}קטגוריה:</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <p>עוגה 3 קומות מיוחדת במינה!</p>
+        <p>😊מתכון קליל וברור! בתאבון</p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>MORE DETAILS</button>
-        <button mat-button>SHARE</button>
+        <button (click)="showToMoreDetails()" mat-button>MORE DETAILS</button>
+        <div *ngIf="isMoreDetails">
+          <p>{{recipe.preparationMethod}}</p>
+        </div>
       </mat-card-actions>
     </mat-card>
   </div>
   <div class="image-container">
-    <img class="img" src="../../assets/chicken-wings.jpg" alt="Photo of a Shiba Inu">
+    <img class="img" [src]="recipe.image" alt="Photo of food">
   </div>
 </div>
